<resources>
    <string name="app_name">預送你</string>
    <string name="action_settings">Settings</string>

    <!-- 首頁按鈕-->
    <string name="mGift">製作禮物</string>
    <string name="mReceivedGift">收禮箱</string>
    <string name="mPlan">預送計畫</string>
    <string name="mFriend">我的好友</string>

    <!-- Detail-->
    <string name="giftDetail">禮物細節</string>
    <string name="giftReceivedDetail">收禮細節</string>
    <string name="planDetail">計畫細節</string>

    <!-- 禮物模式-->
    <string name="giftPhoto">照片</string>
    <string name="giftVideo">影片</string>
    <string name="giftMessage">悄悄話</string>
    <string name="giftTicket">兌換券</string>
    <string name="giftCode">解碼表</string>

    <!-- 禮物模式Aarray-->
    <string-array name="gift_type">
        <item>@string/giftPhoto</item>
        <item>@string/giftVideo</item>
        <item>@string/giftMessage</item>
        <item>@string/giftTicket</item>
        <item>@string/giftCode</item>
    </string-array>

    <!-- 計畫模式-->
    <string name="planSingle">單日送禮</string>
    <string name="planMultiple">多日規劃</string>
    <string name="planList">任務清單</string>


    <!-- 計畫模式Aarray-->
    <string-array name="plan_type">
        <item>@string/planSingle</item>
        <item>@string/planMultiple</item>
        <item>@string/planList</item>
    </string-array>

    <!--新增驚喜式計畫資料-->
    <string name="ok_label">確認</string>
    <string name="clear_all_label">取消</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--                            google sign activity                       -->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">958103176081–1mqjgnfvt7ae2266rcfp8i9a16lsqjuq.apps.googleusercontent.com</string>

    <!--製作禮物-->
    <string name="enterGiftName">請輸入禮物名稱</string>

</resources>
