<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mGift"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:text="@string/mGift"
            android:textSize="20dp"
            android:textColor="#FFF"
            android:background="@drawable/bg_mainbutton"/>

        <Button
            android:id="@+id/mPlan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/mPlan"
            android:textSize="20dp"
            android:textColor="#FFF"
            android:background="@drawable/bg_mainbutton"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mReceivedGift"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:text="@string/mReceivedGift"
            android:textSize="20dp"
            android:textColor="#FFF"
            android:background="@drawable/bg_mainbutton"/>

        <Button
            android:id="@+id/mFriend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/mFriend"
            android:textSize="20dp"
            android:textColor="#FFF"
            android:background="@drawable/bg_mainbutton"/>

    </LinearLayout>

</LinearLayout>