<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiftActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="搜尋："
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/mSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownVerticalOffset="25dp"/>

            <SearchView
                android:id="@+id/mSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:focusable="false"
                android:queryHint="禮物名稱"
                android:textSize="16sp"
                android:paddingLeft="-20dp"/>

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/mSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/giftList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v4.widget.SwipeRefreshLayout>


    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/newGift"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:menu_labels_textSize="16dp"
        fab:menu_backgroundColor="#AB4B4B4B"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gift_camera"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_colorPressed="@color/colorPrimaryLight"
            fab:fab_label="@string/giftPhoto"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gift_video"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_colorPressed="@color/colorPrimaryLight"
            fab:fab_label="@string/giftVideo"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gift_message"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_colorPressed="@color/colorPrimaryLight"
            fab:fab_label="@string/giftMessage"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gift_ticket"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_colorPressed="@color/colorPrimaryLight"
            fab:fab_label="@string/giftTicket"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gift_decode"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_colorPressed="@color/colorPrimaryLight"
            fab:fab_label="@string/giftCode"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>


</FrameLayout>